--- a/css/home.scss
+++ b/css/home.scss
@@ -8,9 +8,6 @@
 	}
 	.parallax-mirror {
 		z-index: 1 !important;
-		img {
-			margin-top: 155px;
-		}
 	}
 }
 .home section {
